--- a/SurRound/Modules/Post/Views/PostContent/PostReplyCell.xib
+++ b/SurRound/Modules/Post/Views/PostContent/PostReplyCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16085" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16092.1" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16078.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16082.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -53,30 +53,19 @@
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                <integer key="value" value="16"/>
+                                <integer key="value" value="8"/>
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Datetime" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UEm-fZ-NnW">
-                        <rect key="frame" x="72" y="72" width="59" height="17"/>
+                        <rect key="frame" x="80" y="72" width="59" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qrg-03-Hf6">
-                        <rect key="frame" x="139" y="72.5" width="16" height="16"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="16" id="9SS-ee-8Me"/>
-                            <constraint firstAttribute="width" secondItem="qrg-03-Hf6" secondAttribute="height" id="Wkb-cq-0rL"/>
-                        </constraints>
-                        <state key="normal" title="Like" image="Icons_ThumbsUpStroke"/>
-                        <connections>
-                            <action selector="didTapLikeButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="gME-jr-T7K"/>
-                        </connections>
-                    </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="UEm-fZ-NnW" firstAttribute="leading" secondItem="8wz-GU-O52" secondAttribute="leading" id="0ui-fJ-y2Q"/>
+                    <constraint firstItem="UEm-fZ-NnW" firstAttribute="leading" secondItem="8wz-GU-O52" secondAttribute="leading" constant="8" id="0ui-fJ-y2Q"/>
                     <constraint firstItem="UEm-fZ-NnW" firstAttribute="top" secondItem="8wz-GU-O52" secondAttribute="bottom" constant="4" id="6zk-a2-H8H"/>
                     <constraint firstItem="8wz-GU-O52" firstAttribute="top" secondItem="Nu5-KQ-5Nk" secondAttribute="top" id="D6T-Qv-SGn"/>
                     <constraint firstItem="Nu5-KQ-5Nk" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="24" id="Gmu-UA-ZhW"/>
@@ -84,14 +73,11 @@
                     <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Nu5-KQ-5Nk" secondAttribute="bottom" id="Pkx-0F-Qyh"/>
                     <constraint firstItem="Nu5-KQ-5Nk" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="VD1-rk-PDt"/>
                     <constraint firstItem="8wz-GU-O52" firstAttribute="leading" secondItem="Nu5-KQ-5Nk" secondAttribute="trailing" constant="8" id="XC0-5h-lGP"/>
-                    <constraint firstItem="qrg-03-Hf6" firstAttribute="centerY" secondItem="UEm-fZ-NnW" secondAttribute="centerY" id="psN-ye-Uis"/>
-                    <constraint firstItem="qrg-03-Hf6" firstAttribute="leading" secondItem="UEm-fZ-NnW" secondAttribute="trailing" constant="8" id="rHG-DY-PsF"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="datetimeLabel" destination="UEm-fZ-NnW" id="4wX-CE-dtz"/>
-                <outlet property="likeButton" destination="qrg-03-Hf6" id="rfb-Ti-CUO"/>
                 <outlet property="replyTextLabel" destination="gpf-f3-be7" id="41V-Y2-019"/>
                 <outlet property="userImageView" destination="Nu5-KQ-5Nk" id="TYQ-fJ-AOp"/>
                 <outlet property="usernameLabel" destination="ecN-dQ-doX" id="uQz-6H-A6D"/>
@@ -99,7 +85,4 @@
             <point key="canvasLocation" x="158.69565217391306" y="196.875"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="Icons_ThumbsUpStroke" width="32" height="32"/>
-    </resources>
 </document>
